# ARCA

./: .gitignore  Cargo.toml  README.md  gpu_context.rs  gpu_inference_context.rs  lib.rs  main.rs  main_gpu_integration.rs  memory.rs  metabolic_core.rs  pyproject.toml  refactor_to_lib.py  scratch_patch_attention.py  scratch_patch_encoder.py  scratch_patch_fp16.py  scratch_patch_top_k.py  sovereign.rs  system.rs  train.rs
arca/: __init__.py  main.py
src/: encoder.rs  gpu_context.rs  gpu_inference_context.rs  lib.rs  memory.rs  metabolic_core.rs  tokenizer.rs  train.rs
