[package]
name = "arca"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15" }
memmap2 = "0.9"
rand_pcg = "0.3"
rand_core = "0.6"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
