[package]
name    = "arca"
version = "0.1.0"
edition = "2021"

# ─────────────────────────────────────────────────────────────────────────────
# Feature flags
# ─────────────────────────────────────────────────────────────────────────────
[features]
default = []
# Enable the full wgpu GPU pipeline.
# Build: cargo build --release --features gpu
# Test:  cargo test  --features gpu
gpu     = ["dep:wgpu", "dep:bytemuck", "dep:pollster"]

# ─────────────────────────────────────────────────────────────────────────────
# Dependencies
# ─────────────────────────────────────────────────────────────────────────────
[dependencies]
ndarray    = { version = "0.15" }
memmap2    = "0.9"
rand_pcg   = "0.3"
rand_core  = "0.6"
rand       = "0.8"
rand_distr = "0.4"
serde      = { version = "1",  features = ["derive"] }
serde_json = "1"

# GPU dependencies — only pulled in when the `gpu` feature is active
wgpu       = { version = "0.20", optional = true }
bytemuck   = { version = "1.14", features = ["derive"], optional = true }
pollster   = { version = "0.3",  optional = true }

# ─────────────────────────────────────────────────────────────────────────────
# Release profile
# ─────────────────────────────────────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
