[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "arca"
version = "0.1.0"
description = "Advanced Recurrent Cognitive Architecture (GPU-First LLM)"
authors = [{name = "Antigravity", email = "test@example.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module", "gpu"]
module-name = "arca.arca_core"
